--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,6 @@ body {
 }
 ::-webkit-scrollbar-thumb {
   margin: 20px;
-  background-color: #b0b0b0;
+  background-color: #363636;
   border-radius: 10px;
 }
